@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.113 2005/03/29 04:10:10 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.114 2005/03/29 04:36:14 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   28 Mar 2005; Preston Cody <codeman@gentoo.org>
-  rewrote filesystem_tools.  hope it works.
+  rewrote filesystem_tools.  looks like it works so ripping out all the old
+  filesystem_tools code.
   
   26 Mar 2005; Preston Cody <codeman@gentoo.org>
   Changed the print statements to logging in the partitioning BE code.
